clusters/my-cluster/linkerd/smi.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: linkerd-smi
  labels:
    linkerd.io/extension: smi
